plugins {
  id 'java'
  id 'application'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

description = 'GTFSVTOR - General Transit Feed Specification Validator'
version = '0.1.0'
mainClassName = 'com.mecatran.gtfsvtor.cmdline.GtfsVtorMain'
applicationDefaultJvmArgs = [ "-Xmx4G" ]

repositories {
  mavenCentral()
}
startScripts {
    applicationName = 'gtfsvtor'
}
distZip {
    archiveName "gtfsvtor.zip"
}
tasks.distTar.enabled = false

// Return the current commit hash from git
def scmRevisionInfo() {
  new ByteArrayOutputStream().withStream { os ->
    def result = exec {
      executable = 'git'
      args = [ 'rev-parse', 'HEAD' ]
      standardOutput = os
    }
    return os.toString().trim()
  }
}

def utcDateTime() {
  def df = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm 'UTC'");
  df.setTimeZone(TimeZone.getTimeZone("UTC"));
  return df.format(new Date())
}

jar {
  manifest {
    attributes 'Implementation-Title'  : project.description,
               'Implementation-Version': version,
               'Built-By'              : System.properties['user.name'],
               'Build-Date'            : utcDateTime(),
               'Build-Revision'        : scmRevisionInfo(),
               'Created-By'            : "Gradle ${gradle.gradleVersion}",
               'Build-Jdk'             : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
               'Build-OS'              : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
  }
}

dependencies {
  compile 'com.google.guava:guava:29.0-jre'
  compile 'org.apache.commons:commons-csv:1.7'
  compile 'com.univocity:univocity-parsers:2.8.4'
  compile 'commons-io:commons-io:2.6'
  compile 'commons-validator:commons-validator:1.6'
  compile 'org.locationtech.jts:jts-core:1.16.1'
  compile 'com.googlecode.jatl:jatl:0.2.3'
  compile 'org.apache.httpcomponents:httpclient:4.5.3'
  compile 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
  compile 'com.beust:jcommander:1.78'
  testCompile 'junit:junit:4.12'
}
